# agentcore-payments-media-demo

./: .gitignore  .gitleaks.toml  .gitleaksignore  DESIGN.md  README.md
.githooks/: pre-commit
agent/: .env.example  requirements.txt  research_agent.py  setup_payments.py
core/: __init__.py  agent.py  callbacks.py  config.py
demo/: 0-check-health.sh  0-new-session.sh  1-research-session.sh  2-explore-merchants.sh  3-explore-trust.sh  4-inspect-payments.sh  5-verify-onchain.sh  waf-smart-paywall.sh
docs/: expanded-architecture.md  waf-monetization.md
docs/diagrams/: architecture.mmd  decision-framework.mmd  payment-flow.mmd
merchant-stack/: package.json  tsconfig.json
merchant-stack/lambda/feedback-service/: index.js
merchant-stack/lambda/trust-registry/: index.js
merchant-stack/lambda/x402-paywall/: index.js
merchant-stack/lib/: merchant-stack.ts  waf-merchant-stack.ts
merchant-stack/sample-content/: index.json  merchants.json  robots.txt
merchant-stack/sample-content/articles/: ai-content-moderation.json  programmatic-adtech-shift.json  streaming-wars-q2.json
merchant-stack/sample-content/copperview/: catalog.json
merchant-stack/sample-content/data/: streaming-metrics-feed.json
notebook/: demo.ipynb
scripts/: apply-waf-monetization.sh  quick-start.sh  settle_one.py  setup-payments-iam.sh
tests/: run-tests.sh
tests/agent/: test_integration.py
tests/core/: test_core.py
tests/merchant/: test_lambdas.py  test_waf_stack.py
tests/notebook/: test_notebook.py
tests/ui/: test_e2e.py
ui/: README.md
ui/agent/: main.py  pyproject.toml
(+24 files in other folders)
